# dotfiles

./: .alacritty.yml  .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitmodules  .profile  .tmux.conf  .vimrc  Manjaro.md  README.md  dothelp.md  install-system  secure-vault  secure-vault.json  setup
.config/: picom.conf  starship.toml
.config/alacritty/: alacritty.toml  alacritty.yml  themes.md
.config/bat/: help.txt
.config/conky/: start_conky.sh
.config/conky/Conky_Revisited_2/Conky_Circle_Horizontal/: settings.lua  start_conky_General_HORIZONTAL_circle
.config/conky/Regulus/: Regulus.conf  start.sh  teste.css
.config/conky/vision/: Z333-vision.conkyrc
.config/glow/: stackexchange_theme.json
.config/latte/: My Layout.layout.latte
.config/nvim/: .luacheckrc  coc-settings.json  init.lua  init.vim
.config/nvim/legacy/: floaterm.vim  vim-closetag.vim  vim-test.vim
.config/nvim/plugins/: airline.vim  coc.vim  commentary.vim  context-commentstring.vim  devicons.vim  dispatch.vim  dracula.vim  editorconfig.vim  eunuch.vim  exchange.vim  firenvim.vim  fugitive.vim  fzf.vim  heritage.vim  lastplace.vim  lion.vim  markdown-preview.vim  nerdtree.vim  nvim-lspconfig.vim  peekaboo.vim  phpactor.vim  polyglot.vim  projectionist.vim  quickscope.vim  repeat.vim  rooter.vim  sayonara.vim  smooth-scroll.vim  splitjoin.vim  surround.vim  targets.vim  telescope.vim  textobj-xmlattr.vim  tmux-navigator.vim  unimpaired.vim  vim-cmake.vim  vim-codefmt.vim  vim-csscolor.vim  vim-glaive.vim  vim-maktaba.vim  (+4 more)
.config/nvim/wiki/: guia-rapido.md  index.md
.config/picom/: picom.conf
.config/powerline/colorschemes/: default.json
.config/silver/: silver.toml
.config/ulauncher/: settings.json  shortcuts.json
.config/wezterm/: cyberdream.lua  wezterm.lua
.install-packages/: apt.sh  cargo.sh  custom.sh  dev.nix  move.sh  neovim.nix  nix-packages.json  nix-setup.sh  pip.sh  repos.sh  system.nix  terminal.nix
.scripts/autoconfig/: wacomconf
.scripts/cpp/: cmake-build  cmake-debug  cmake-init  create-cpp-class  new-cmake-project
.scripts/fzf/: help.txt
.scripts/git/: conventional-commits.sh
.scripts/sgdk/: sgdk  sgdk-template
.scripts/videos/: animetv  attaudio  attsub  editsub  exdata
.sgdk/: build-sgdk  new-sgdk-project.sh  sgdk-bizhawk  sgdk-bizhawk.sh  sgdk-blastem  sgdk-blastem.sh
.tmux/: .tmux-cht-command  .tmux-cht-languages  base16.sh  spotify.sh  tmux-cht.sh  tmuxenv  tmuxenv.sh
.tmux/custom/: core-utils.txt  help.sh  languages.txt  options.txt  sites.txt  tmux-cht.sh
.tmux/custom/byexample/: byexample.sh  c-sites.txt  c.md  cpp-sites.txt  cpp.md  go-sites.txt  go.md  languages.txt  python-sites.txt  python.md  rust-sites.txt  rust.md
.tmux/custom/chatgpt/: chatgpt.sh  threads.txt
.tmux/custom/exercism/: exercism.sh  template.md
.tmux/custom/stackapi/: askubuntu-tags.csv  filter.sh  serverfault-tags.csv  sites.txt  stackapi.sh  stackexchange.sh  stackoverflow-tags.csv  superuser-tags.csv
.tmux/layouts/: main.session.sh  neovim.session.sh
.vim/: coc-settings.json  config  generalkeybindings  lspconfig  lspconfig.vim  pluginkeybindings  pluginkeybindings.vim
.vim/configs/: airline.vim  aleconfig.vim  config.vim  generalkeybindings.vim  keybindings.vim  lspconfig.vim  pluginkeybindings.vim  plugins.vim
.vimwiki/: coc.nvim  emmet-vim.md  fzf.md  index.md  markdown-preview.md  neo-term.md  nerdtree.md  vim-commentary.md  vim-fugitive.md  vim-hardtime.md  vim-maximizer.md  vim-test.md  vimspector.md
Pictures/: latte.txt
Public/Utils/: Instalar Impressora.md  Manjaro.md  Suporte Ubuntu.txt  customizacao.txt  pacman.md
Public/dev/go/: cli.go.temp  menu.txt  webservice.go.temp
Public/dev/notes/: bash.md  git-commands.md  git.md  go.md  python.md
Public/dev/utils/: git.md  python.md  wacom.md
Templates/cmake-sfml/: .clang-format  .gitmodules  CMakeLists.txt
Templates/cmake-sfml/libs/: CMakeLists.txt  README.md
Templates/cmake-sfml/source/: CMakeLists.txt  main.cpp
Templates/cmake-template/: CMakeLists.txt  README.md
Templates/cmake-template/include/modulo/: teste.hpp
Templates/cmake-template/source/: CMakeLists.txt  main.cpp
Templates/cmake-template/source/modulo/: CMakeLists.txt  teste.cpp
Templates/cmake-template/test/: CMakeLists.txt  teste_modulo.cpp
dev/notes/: algo-data-structures.md  autosar.md  c.md  core-utils.md  embedded.md  git.md  go-pluralsight.md  go.md  linux.md  nix.md  regex.md  stackexchangeapi.md  tmux.md  unity.md
dev/notes/cpp/: cmake.md  sdl2-chatgpt3.5.md  sdl2.md
exercism/: lista.txt
exercism/go/airport-robot/: airport_robot.go
exercism/go/animal-magic/: animal_magic.go
exercism/go/bird-watcher/: bird_watcher.go
exercism/go/blackjack/: blackjack.go
exercism/go/booking-up-for-beauty/: booking_up_for_beauty.go
exercism/go/card-tricks/: card_tricks.go
exercism/go/cars-assemble/: cars_assemble.go
exercism/go/census/: census.go
exercism/go/chessboard/: chessboard.go
exercism/go/election-day/: election_day.go
exercism/go/elons-toys/: elons_toys.go
exercism/go/expenses/: expenses.go
exercism/go/gross-store/: gross_store.go
exercism/go/hello-world/: go.mod
exercism/go/interest-is-interesting/: interest_is_interesting.go
exercism/go/lasagna/: lasagna.go
exercism/go/lasagna-master/: lasagna_master.go
exercism/go/logs-logs-logs/: logs_logs_logs.go
exercism/go/meteorology/: meteorology.go
exercism/go/need-for-speed/: need_for_speed.go
exercism/go/nth-prime/: nth_prime.go
exercism/go/parsing-log-files/: parsing_log_files.go
exercism/go/party-robot/: party_robot.go
exercism/go/reverse-string/: reverse_string.go
exercism/go/simple-linked-list/: simple_linked_list.go
exercism/go/sorting-room/: sorting_room.go
exercism/go/sublist/: sublist.go
exercism/go/the-farm/: the_farm.go
exercism/go/weather-forecast/: weather_forecast.go
exercism/go/welcome-to-tech-palace/: welcome_to_tech_palace.go
(+166 files in other folders)
